Toy model code updated with money constraint

--- a/farmopt.ipynb
+++ b/farmopt.ipynb
@@ -74,6 +74,8 @@
     "Finally we try to connect the ouput of crops to the inputs required by livestock (i.e. if we grow grain we might save money by feeding that to our animals rather than selling it).\n",
     "\n",
     "-->\n",
+    "### Toy Model ###\n",
+    "\n",
     "We used an iterative process to produce the model for our problem.  To begin we created a \"toy\" LP of the form:\n",
     "\n",
     "\n",
@@ -94,6 +96,10 @@
     "    \\begin{bmatrix} acres\\\\ housing\\\\ money \\end{bmatrix}$$\n",
     "    \n",
     "Creating this toy model allowed us to code the problem without complex constraints in order to ensure that data import and indexing was working properly.  The issue with this model is that it is an oversimplification of the problem and will only choose the single highest return crop and livestock for available acreage and housing.\n",
+    "\n",
+    "### Adding Diversity Constraint, now MIP ###\n",
+    "\n",
+    "In order \n",
     "\n",
     "<!---\n",
     "Sets:\n",
@@ -181,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +200,7 @@
     "# create a list of crops from the crops array\n",
     "crops = crops_array[1:end,1];\n",
     "# create a NamedArray that specifies the information of each crop\n",
-    "crops=convert(Array{Symbol},crops )\n",
+    "#crops = convert(Array{Symbol},crops )\n",
     "using NamedArrays\n",
     "crops_matrix = crops_array[1:end,2:end]; # rows are crops, columns are information of crops\n",
     "crops_information_array = NamedArray(crops_matrix, (crops, info_crops), (\"crops\",\"info_crops\"));\n",
@@ -208,7 +214,7 @@
     "# create a list of stocks from the livestocks array\n",
     "lstocks = lstocks_array[1:end,1];\n",
     "# create a NamedArray that specifies the information of each livestock\n",
-    "lstocks=convert(Array{Symbol},lstocks )\n",
+    "#lstocks = convert(Array{Symbol},lstocks )\n",
     "lstocks_matrix = lstocks_array[1:end,2:end] ;# rows are livestocks, columns are information of livestocks\n",
     "lstocks_information_array = NamedArray(lstocks_matrix, (lstocks, info_lstocks), (\"lstocks\",\"info_lstocks\"));"
    ]
@@ -223,44 +229,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mPrecompiling module Missings.\n",
-      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mPrecompiling module DataFrames.\n",
-      "\u001b[39m\u001b[1m\u001b[36mINFO: \u001b[39m\u001b[22m\u001b[36mPrecompiling module CSV.\n",
-      "\u001b[39mWARNING: Method definition ==(Base.Nullable{S}, Base.Nullable{T}) in module Base at nullable.jl:238 overwritten in module NullableArrays at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:99.\n",
-      "WARNING: Method definition ==(Base.Nullable{S}, Base.Nullable{T}) in module Base at nullable.jl:238 overwritten in module NullableArrays at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:99.\n",
-      "WARNING: Method definition ==(Base.Nullable{S}, Base.Nullable{T}) in module Base at nullable.jl:238 overwritten in module NullableArrays at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:99.\n",
-      "WARNING: Method definition ==(Base.Nullable{S}, Base.Nullable{T}) in module Base at nullable.jl:238 overwritten in module NullableArrays at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:99.\n",
-      "WARNING: Method definition ==(Base.Nullable{S}, Base.Nullable{T}) in module Base at nullable.jl:238 overwritten in module NullableArrays at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:99.\n"
-     ]
-    },
-    {
      "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: Cannot `convert` an object of type Nullable{WeakRefString{UInt8}} to an object of type Symbol\nThis may have arisen from a call to the constructor Symbol(...),\nsince type constructors fall back to convert methods.\u001b[39m",
+     "evalue": "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
      "output_type": "error",
      "traceback": [
-      "\u001b[91mMethodError: Cannot `convert` an object of type Nullable{WeakRefString{UInt8}} to an object of type Symbol\nThis may have arisen from a call to the constructor Symbol(...),\nsince type constructors fall back to convert methods.\u001b[39m",
+      "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] \u001b[1mcopy!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::IndexLinear, ::Array{Symbol,1}, ::IndexLinear, ::Array{Nullable,1}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./abstractarray.jl:656\u001b[22m\u001b[22m",
-      " [2] \u001b[1mconvert\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Type{Array{Symbol,N} where N}, ::Array{Nullable,1}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./array.jl:372\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:522\u001b[22m\u001b[22m"
+      " [1] \u001b[1maddtoexpr_reorder\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::JuMP.GenericAffExpr{Float64,JuMP.Variable}, ::JuMP.Variable, ::Nullable{Float64}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:280\u001b[22m\u001b[22m",
+      " [2] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:489\u001b[22m\u001b[22m [inlined]",
+      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/macros.jl:422\u001b[22m\u001b[22m [inlined]",
+      " [4] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m",
+      " [5] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:522\u001b[22m\u001b[22m"
      ]
     }
    ],
    "source": [
-    "#crops to feed our livestocks\n",
-    "feedcrops= [:Wheat, :Corn, :Soybean, :Hay];\n",
-    "\n",
     "#the properties of our farm\n",
     "tt_field=5;\n",
     "tt_housing=3;\n",
+    "tt_money=100000;\n",
     "\n",
     "using JuMP, Clp\n",
     "m = Model(solver=ClpSolver()) # create model named m\n",
@@ -269,28 +261,32 @@
     "@variable(m, crop[crops] >= 0)\n",
     "@variable(m, lstock[lstocks]>=0)\n",
     "\n",
-    "println(crops_information_array)\n",
-    "println()\n",
-    "println(crops)\n",
-    "println(lstocks)\n",
-    "println(info_lstocks)\n",
-    "#constraints of pasture and field\n",
-    "@constraint(m, sum(crop[i] for i in crops) +sum(lstock[j]*lstocks_information_array[j,:Pasture] for j in lstocks)<= tt_field )\n",
+    "#println(crops_information_array)\n",
+    "#println()\n",
+    "#println(crops)\n",
+    "#println(lstocks)\n",
+    "#println(info_lstocks)\n",
     "\n",
-    "#constraints of housing area\n",
-    "@constraint(m, tthousing, sum(lstock[j]*lstocks_information_array[j,:Enclosed_Housing] for j in lstocks) <= tt_housing )\n",
+    "#constraints for acreage available \n",
+    "@constraint(m, sum(crop[i] for i in crops) + sum(lstock[j] * lstocks_information_array[j,:Pasture] for j in lstocks) <= tt_field )\n",
     "\n",
-    "#constraints for feeding the livestocks using our own crops\n",
-    "@constraint(m, constr[k in feedcrops],sum(lstock[j]*lstocks_information_array[j,k] for j in lstocks) <= crops_information_array[k,:Return] )\n",
+    "#constraints for housing available\n",
+    "@constraint(m, tthousing, sum(lstock[j] * lstocks_information_array[j,:Enclosed_Housing] for j in lstocks) <= tt_housing)\n",
     "\n",
-    "# expression of the total return from livestocks\n",
-    "@expression(m, tot_return_lstock, sum(lstock[i]* lstocks_information_array[i,:Returns ]for i in lstocks) )\n",
-    "#expression of the total return from crops\n",
-    "@expression(m,   tot_return_crop,sum(crop[i]* (crops_information_array[i,:Return ]-crops_information_array[i,:Cost ])for i in crops) )\n",
+    "#constraint for money available\n",
+    "@constraint(m, sum(crop[i]*crops_information_array[i,:Cost] for i in crops) + sum(lstock[j]*lstocks_information_array[j,:Cost] for j in lstocks) <= tt_money))\n",
     "\n",
+    "#expression for the total cost of livestock\n",
+    "@expression(m, tot_cost_lstock, sum(lstock[i] * lstocks_information_array[i,:Cost] for i in lstocks))\n",
+    "#expression fpr the total cost of crop\n",
+    "@expression(m,   tot_cost_crop,sum(crop[i] * crops_information_array[i,:Cost] for i in crops))\n",
+    "#expression for the total return from livestocks\n",
+    "@expression(m, gross_return_lstock, sum(lstock[i]* lstocks_information_array[i,:Returns ] for i in lstocks))\n",
+    "#expression fpr the total return from crops\n",
+    "@expression(m, gross_return_crop, sum(crop[i]* crops_information_array[i,:Return] for i in crops))\n",
     "\n",
     "#objective: to maximize the return\n",
-    "@objective(m, Max, tot_return_crop+tot_return_lstock)\n",
+    "@objective(m, Max, gross_return_crop + gross_return_lstock - tot_cost_lstock - tot_cost_crop)\n",
     "\n",
     "solve(m)\n",
     "println(getobjectivevalue(m))\n",
