--- a/farmoptcode1.ipynb
+++ b/farmoptcode1.ipynb
@@ -2,27 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: Method definition ==(Base.Nullable{S}, Base.Nullable{T}) in module Base at nullable.jl:238 overwritten in module NullableArrays at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:99.\n"
+      "13×2 Named Array{Nullable,2}\n",
+      "crops ╲ info_crops │   :Cost  :Return\n",
+      "───────────────────┼─────────────────\n",
+      "\"Corn\"             │  257.65   565.12\n",
+      "\"Soybean\"          │  158.14  386.908\n",
+      "\"Wheat\"            │  159.57  217.147\n",
+      "\"Oat\"              │  119.38  143.144\n",
+      "\"Barley\"           │  135.24   323.07\n",
+      "\"Flaxseed\"         │  130.77   142.41\n",
+      "\"Rye\"              │  225.65  161.025\n",
+      "\"Peas\"             │  116.83   229.69\n",
+      "\"Beans\"            │  239.63   401.96\n",
+      "\"Canola\"           │  187.14   327.18\n",
+      "\"Sunflower\"        │  233.22   580.68\n",
+      "\"Hops\"             │  4000.0  15672.0\n",
+      "\"Hay\"              │  147.28   322.08\n",
+      "\n",
+      "Nullable[\"Corn\", \"Soybean\", \"Wheat\", \"Oat\", \"Barley\", \"Flaxseed\", \"Rye\", \"Peas\", \"Beans\", \"Canola\", \"Sunflower\", \"Hops\", \"Hay\"]\n",
+      "Nullable[\"Yearling_Steers\", \"Steers_Calves\", \"Dairy_Goat\", \"Pig\", \"Sheep\", \"Broiler_organic\", \"Broiler_regular\"]\n",
+      "Symbol[:Enclosed_Housing, :Exercise_Yard, :Pasture, :Corn, :Soybean, :Wheat, :Hay, :Other_Costs, :Returns]\n"
      ]
     },
     {
      "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: Cannot `convert` an object of type Nullable{WeakRefString{UInt8}} to an object of type Symbol\nThis may have arisen from a call to the constructor Symbol(...),\nsince type constructors fall back to convert methods.\u001b[39m",
+     "evalue": "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
      "output_type": "error",
      "traceback": [
-      "\u001b[91mMethodError: Cannot `convert` an object of type Nullable{WeakRefString{UInt8}} to an object of type Symbol\nThis may have arisen from a call to the constructor Symbol(...),\nsince type constructors fall back to convert methods.\u001b[39m",
+      "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] \u001b[1mcopy!\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::IndexLinear, ::Array{Symbol,1}, ::IndexLinear, ::Array{Nullable,1}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./abstractarray.jl:656\u001b[22m\u001b[22m",
-      " [2] \u001b[1mconvert\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::Type{Array{Symbol,N} where N}, ::Array{Nullable,1}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./array.jl:372\u001b[22m\u001b[22m",
-      " [3] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:522\u001b[22m\u001b[22m"
+      " [1] \u001b[1maddtoexpr_reorder\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::JuMP.GenericAffExpr{Float64,JuMP.Variable}, ::JuMP.Variable, ::Nullable{Float64}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:280\u001b[22m\u001b[22m",
+      " [2] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:489\u001b[22m\u001b[22m [inlined]",
+      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/macros.jl:422\u001b[22m\u001b[22m [inlined]",
+      " [4] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m",
+      " [5] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:522\u001b[22m\u001b[22m"
      ]
     }
    ],
@@ -36,7 +57,7 @@
     "# create a list of crops from the crops array\n",
     "crops = crops_array[1:end,1];\n",
     "# create a NamedArray that specifies the information of each crop\n",
-    "crops=convert(Array{Symbol},crops )\n",
+    "#crops=convert(Array{Symbol},crops )\n",
     "using NamedArrays\n",
     "crops_matrix = crops_array[1:end,2:end]; # rows are crops, columns are information of crops\n",
     "crops_information_array = NamedArray(crops_matrix, (crops, info_crops), (\"crops\",\"info_crops\"));\n",
@@ -50,7 +71,7 @@
     "# create a list of stocks from the livestocks array\n",
     "lstocks = lstocks_array[1:end,1];\n",
     "# create a NamedArray that specifies the information of each livestock\n",
-    "lstocks=convert(Array{Symbol},lstocks )\n",
+    "#lstocks=convert(Array{Symbol},lstocks )\n",
     "lstocks_matrix = lstocks_array[1:end,2:end] ;# rows are livestocks, columns are information of livestocks\n",
     "lstocks_information_array = NamedArray(lstocks_matrix, (lstocks, info_lstocks), (\"lstocks\",\"info_lstocks\"));\n",
     "\n",
@@ -74,18 +95,18 @@
     "println(lstocks)\n",
     "println(info_lstocks)\n",
     "#constraints of pasture and field\n",
-    "@constraint(m, sum(crop[i] for i in crops) +sum(lstock[j]*lstocks_information_array[j,:Pasture] for j in lstocks)<= tt_field )\n",
+    "@constraint(m, sum(crop[i] for i in crops) +sum(lstock[j]*lstocks_information_array[j,3] for j in lstocks)<= tt_field )\n",
     "\n",
     "#constraints of housing area\n",
-    "@constraint(m, tthousing, sum(lstock[j]*lstocks_information_array[j,:Enclosed_Housing] for j in lstocks) <= tt_housing )\n",
+    "@constraint(m, tthousing, sum(lstock[j]*lstocks_information_array[j,1] for j in lstocks) <= tt_housing )\n",
     "\n",
     "#constraints for feeding the livestocks using our own crops\n",
-    "@constraint(m, constr[k in feedcrops],sum(lstock[j]*lstocks_information_array[j,k] for j in lstocks) <= crops_information_array[k,:Return] )\n",
+    "#@constraint(m, constr[k in feedcrops],sum(lstock[j]*lstocks_information_array[j,k] for j in lstocks) <= crops_information_array[k,2] )\n",
     "\n",
     "# expression of the total return from livestocks\n",
-    "@expression(m, tot_return_lstock, sum(lstock[i]* lstocks_information_array[i,:Returns ]for i in lstocks) )\n",
+    "@expression(m, tot_return_lstock, sum(lstock[i]* lstocks_information_array[i,9 ]for i in lstocks) )\n",
     "#expression of the total return from crops\n",
-    "@expression(m,   tot_return_crop,sum(crop[i]* (crops_information_array[i,:Return ]-crops_information_array[i,:Cost ])for i in crops) )\n",
+    "@expression(m,   tot_return_crop,sum(crop[i]* (crops_information_array[i,2 ]-crops_information_array[i,1 ])for i in crops) )\n",
     "\n",
     "\n",
     "#objective: to maximize the return\n",
@@ -96,13 +117,6 @@
     "println(getvalue(crop))\n",
     "println(getvalue(lstock))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
