toy code working

--- a/farmopt.ipynb
+++ b/farmopt.ipynb
@@ -99,7 +99,12 @@
     "\n",
     "### Adding Diversity Constraint, now MIP ###\n",
     "\n",
-    "In order \n",
+    "Adding detail, and complexity, to our model will bring it more in line with reality.  Adding a diversity constraint, i.e. forcing the optimum solution to include a minimum number of crop choices as well as a minimum number of livestock choices, changes our Linear Program into a mixed integer program.\n",
+    "\n",
+    "In order to model this constraint we will indicator variables $z_i$ which indicate whether or not a certain crop or livestock is included in the optimum choice.\n",
+    "\n",
+    "$$ x_i > 0 \\Rightarrow z_i = 1$$\n",
+    "\n",
     "\n",
     "<!---\n",
     "Sets:\n",
@@ -187,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +211,7 @@
     "crops_information_array = NamedArray(crops_matrix, (crops, info_crops), (\"crops\",\"info_crops\"));\n",
     "\n",
     "\n",
-    "raw1 = CSV.read(\"LiveStock1.csv\");\n",
+    "raw1 = CSV.read(\"LiveStock.csv\");\n",
     "# turn LiveStock into an array\n",
     "lstocks_array = convert(Array,raw1);\n",
     "# the `names' of the DataFrame (header) are the information of each livestock;\n",
@@ -229,18 +234,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
+     "evalue": "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{WeakRefString{UInt8}})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
      "output_type": "error",
      "traceback": [
-      "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
+      "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{WeakRefString{UInt8}})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
       "",
       "Stacktrace:",
-      " [1] \u001b[1maddtoexpr_reorder\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::JuMP.GenericAffExpr{Float64,JuMP.Variable}, ::JuMP.Variable, ::Nullable{Float64}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:280\u001b[22m\u001b[22m",
+      " [1] \u001b[1maddtoexpr_reorder\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::JuMP.GenericAffExpr{Float64,JuMP.Variable}, ::JuMP.Variable, ::Nullable{WeakRefString{UInt8}}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:280\u001b[22m\u001b[22m",
       " [2] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:489\u001b[22m\u001b[22m [inlined]",
       " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/macros.jl:422\u001b[22m\u001b[22m [inlined]",
       " [4] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m",
@@ -281,8 +286,8 @@
     "#expression fpr the total cost of crop\n",
     "@expression(m,   tot_cost_crop,sum(crop[i] * crops_information_array[i,:Cost] for i in crops))\n",
     "#expression for the total return from livestocks\n",
-    "@expression(m, gross_return_lstock, sum(lstock[i]* lstocks_information_array[i,:Returns ] for i in lstocks))\n",
-    "#expression fpr the total return from crops\n",
+    "@expression(m, gross_return_lstock, sum(lstock[i]* lstocks_information_array[i,:Return ] for i in lstocks))\n",
+    "#expression for the total return from crops\n",
     "@expression(m, gross_return_crop, sum(crop[i]* crops_information_array[i,:Return] for i in crops))\n",
     "\n",
     "#objective: to maximize the return\n",
