--- a/farmoptcode1.ipynb
+++ b/farmoptcode1.ipynb
@@ -2,48 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13×2 Named Array{Nullable,2}\n",
+      "12×2 Named Array{Any,2}\n",
       "crops ╲ info_crops │   :Cost  :Return\n",
       "───────────────────┼─────────────────\n",
-      "\"Corn\"             │  257.65   565.12\n",
-      "\"Soybean\"          │  158.14  386.908\n",
-      "\"Wheat\"            │  159.57  217.147\n",
-      "\"Oat\"              │  119.38  143.144\n",
-      "\"Barley\"           │  135.24   323.07\n",
-      "\"Flaxseed\"         │  130.77   142.41\n",
-      "\"Rye\"              │  225.65  161.025\n",
-      "\"Peas\"             │  116.83   229.69\n",
-      "\"Beans\"            │  239.63   401.96\n",
-      "\"Canola\"           │  187.14   327.18\n",
-      "\"Sunflower\"        │  233.22   580.68\n",
-      "\"Hops\"             │  4000.0  15672.0\n",
-      "\"Hay\"              │  147.28   322.08\n",
+      ":Corn              │  257.65   565.12\n",
+      ":Soybean           │  158.14  386.908\n",
+      ":Wheat             │  159.57  217.147\n",
+      ":Oat               │  119.38  143.144\n",
+      ":Barley            │  135.24   323.07\n",
+      ":Flaxseed          │  130.77   142.41\n",
+      ":Rye               │  225.65  161.025\n",
+      ":Peas              │  116.83   229.69\n",
+      ":Beans             │  239.63   401.96\n",
+      ":Canola            │  187.14   327.18\n",
+      ":Sunflower         │  233.22   580.68\n",
+      ":Hay               │  147.28   322.08\n",
       "\n",
-      "Nullable[\"Corn\", \"Soybean\", \"Wheat\", \"Oat\", \"Barley\", \"Flaxseed\", \"Rye\", \"Peas\", \"Beans\", \"Canola\", \"Sunflower\", \"Hops\", \"Hay\"]\n",
-      "Nullable[\"Yearling_Steers\", \"Steers_Calves\", \"Dairy_Goat\", \"Pig\", \"Sheep\", \"Broiler_organic\", \"Broiler_regular\"]\n",
-      "Symbol[:Enclosed_Housing, :Exercise_Yard, :Pasture, :Corn, :Soybean, :Wheat, :Hay, :Other_Costs, :Returns]\n"
-     ]
-    },
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching *(::JuMP.Variable, ::Nullable{Float64})\u001b[0m\nClosest candidates are:\n  *(::Any, ::Any, \u001b[91m::Any\u001b[39m, \u001b[91m::Any...\u001b[39m) at operators.jl:424\n  *(\u001b[91m::Nullable{Union{}}\u001b[39m, ::Nullable{S}) where S at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/NullableArrays/src/operators.jl:108\n  *(::JuMP.Variable, \u001b[91m::JuMP.Variable\u001b[39m) at /nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/operators.jl:56\n  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1maddtoexpr_reorder\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::JuMP.GenericAffExpr{Float64,JuMP.Variable}, ::JuMP.Variable, ::Nullable{Float64}\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:280\u001b[22m\u001b[22m",
-      " [2] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/parseExpr_staged.jl:489\u001b[22m\u001b[22m [inlined]",
-      " [3] \u001b[1mmacro expansion\u001b[22m\u001b[22m at \u001b[1m/nobackup/julia/JuliaPro-0.6.2.2/JuliaPro/pkgs-0.6.2.2/v0.6/JuMP/src/macros.jl:422\u001b[22m\u001b[22m [inlined]",
-      " [4] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m",
-      " [5] \u001b[1minclude_string\u001b[22m\u001b[22m\u001b[1m(\u001b[22m\u001b[22m::String, ::String\u001b[1m)\u001b[22m\u001b[22m at \u001b[1m./loading.jl:522\u001b[22m\u001b[22m"
+      "Symbol[:Corn, :Soybean, :Wheat, :Oat, :Barley, :Flaxseed, :Rye, :Peas, :Beans, :Canola, :Sunflower, :Hay]\n",
+      "Symbol[:Yearling_Steers, :Steers_Calves, :Dairy_Goat, :Pig, :Sheep, :Broiler_organic, :Broiler_regular]\n",
+      "Symbol[:Enclosed_Housing, :Exercise_Yard, :Pasture, :Corn, :Soybean, :Wheat, :Hay, :Other_Costs, :Return, :Net_Return, :Cost]\n",
+      "148983.7921276048\n",
+      "crop: 1 dimensions:\n",
+      "[     Corn] = 0.0\n",
+      "[  Soybean] = 0.0\n",
+      "[    Wheat] = 0.0\n",
+      "[      Oat] = 0.0\n",
+      "[   Barley] = 0.0\n",
+      "[ Flaxseed] = 0.0\n",
+      "[      Rye] = 0.0\n",
+      "[     Peas] = 0.0\n",
+      "[    Beans] = 0.0\n",
+      "[   Canola] = 0.0\n",
+      "[Sunflower] = 428.77969299373984\n",
+      "[      Hay] = 0.0\n",
+      "lstock: 1 dimensions:\n",
+      "[Yearling_Steers] = 0.0\n",
+      "[  Steers_Calves] = 0.0\n",
+      "[     Dairy_Goat] = 0.0\n",
+      "[            Pig] = 0.0\n",
+      "[          Sheep] = 0.0\n",
+      "[Broiler_organic] = 0.0\n",
+      "[Broiler_regular] = 0.0\n"
      ]
     }
    ],
@@ -57,7 +63,7 @@
     "# create a list of crops from the crops array\n",
     "crops = crops_array[1:end,1];\n",
     "# create a NamedArray that specifies the information of each crop\n",
-    "#crops=convert(Array{Symbol},crops )\n",
+    "crops=convert(Array{Symbol},crops )\n",
     "using NamedArrays\n",
     "crops_matrix = crops_array[1:end,2:end]; # rows are crops, columns are information of crops\n",
     "crops_information_array = NamedArray(crops_matrix, (crops, info_crops), (\"crops\",\"info_crops\"));\n",
@@ -71,7 +77,7 @@
     "# create a list of stocks from the livestocks array\n",
     "lstocks = lstocks_array[1:end,1];\n",
     "# create a NamedArray that specifies the information of each livestock\n",
-    "#lstocks=convert(Array{Symbol},lstocks )\n",
+    "lstocks=convert(Array{Symbol},lstocks )\n",
     "lstocks_matrix = lstocks_array[1:end,2:end] ;# rows are livestocks, columns are information of livestocks\n",
     "lstocks_information_array = NamedArray(lstocks_matrix, (lstocks, info_lstocks), (\"lstocks\",\"info_lstocks\"));\n",
     "\n",
@@ -79,9 +85,9 @@
     "feedcrops= [:Wheat, :Corn, :Soybean, :Hay];\n",
     "\n",
     "#the properties of our farm\n",
-    "tt_field=5;\n",
+    "tt_field=900;\n",
     "tt_housing=3;\n",
-    "\n",
+    "tt_money=100000\n",
     "using JuMP, Clp\n",
     "m = Model(solver=ClpSolver()) # create model named m\n",
     "\n",
@@ -95,22 +101,28 @@
     "println(lstocks)\n",
     "println(info_lstocks)\n",
     "#constraints of pasture and field\n",
-    "@constraint(m, sum(crop[i] for i in crops) +sum(lstock[j]*lstocks_information_array[j,3] for j in lstocks)<= tt_field )\n",
+    "@constraint(m, sum(crop[i] for i in crops) +sum(lstock[j]*lstocks_information_array[j,:Pasture] for j in lstocks)<= tt_field )\n",
     "\n",
     "#constraints of housing area\n",
-    "@constraint(m, tthousing, sum(lstock[j]*lstocks_information_array[j,1] for j in lstocks) <= tt_housing )\n",
+    "@constraint(m, tthousing, sum(lstock[j]*lstocks_information_array[j,:Enclosed_Housing] for j in lstocks) <= tt_housing )\n",
+    "\n",
+    "#constraint for money available\n",
+    "@constraint(m, sum(crop[i]*crops_information_array[i,:Cost] for i in crops) + sum(lstock[j]*lstocks_information_array[j,:Cost] for j in lstocks) <= tt_money)\n",
     "\n",
     "#constraints for feeding the livestocks using our own crops\n",
-    "#@constraint(m, constr[k in feedcrops],sum(lstock[j]*lstocks_information_array[j,k] for j in lstocks) <= crops_information_array[k,2] )\n",
+    "#@constraint(m, constr[k in feedcrops],sum(lstock[j]*lstocks_information_array[j,k] for j in lstocks) <= crops_information_array[k,:Return] )\n",
     "\n",
-    "# expression of the total return from livestocks\n",
-    "@expression(m, tot_return_lstock, sum(lstock[i]* lstocks_information_array[i,9 ]for i in lstocks) )\n",
-    "#expression of the total return from crops\n",
-    "@expression(m,   tot_return_crop,sum(crop[i]* (crops_information_array[i,2 ]-crops_information_array[i,1 ])for i in crops) )\n",
-    "\n",
+    "#expression for the total cost of livestock\n",
+    "@expression(m, tot_cost_lstock, sum(lstock[i] * lstocks_information_array[i,:Cost] for i in lstocks))\n",
+    "#expression fpr the total cost of crop\n",
+    "@expression(m,   tot_cost_crop,sum(crop[i] * crops_information_array[i,:Cost] for i in crops))\n",
+    "#expression for the total return from livestocks\n",
+    "@expression(m, gross_return_lstock, sum(lstock[i]* lstocks_information_array[i,:Return ] for i in lstocks))\n",
+    "#expression fpr the total return from crops\n",
+    "@expression(m, gross_return_crop, sum(crop[i]* crops_information_array[i,:Return] for i in crops))\n",
     "\n",
     "#objective: to maximize the return\n",
-    "@objective(m, Max, tot_return_crop+tot_return_lstock)\n",
+    "@objective(m, Max, gross_return_crop + gross_return_lstock - tot_cost_lstock - tot_cost_crop)\n",
     "\n",
     "solve(m)\n",
     "println(getobjectivevalue(m))\n",
@@ -124,11 +136,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.6.2",
+   "display_name": "Julia 0.6.3",
    "language": "julia",
    "name": "julia-0.6"
   },
@@ -136,7 +155,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.6.2"
+   "version": "0.6.3"
   }
  },
  "nbformat": 4,
