--- a/farmoptcode2.ipynb
+++ b/farmoptcode2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,8 @@
       "Symbol[:Corn, :Soybean, :Wheat, :Oat, :Barley, :Flaxseed, :Rye, :Peas, :Beans, :Canola, :Sunflower, :Hay]\n",
       "Symbol[:Yearling_Steers, :Steers_Calves, :Dairy_Goat, :Pig, :Sheep, :Broiler_organic, :Broiler_regular]\n",
       "Symbol[:Enclosed_Housing, :Exercise_Yard, :Pasture, :Corn, :Soybean, :Wheat, :Hay, :Other_Costs, :Return, :Net_Return, :Cost]\n",
-      "148983.7921276048\n",
+      "Academic license - for non-commercial use only\n",
+      "312727.93999999994\n",
       "crop: 1 dimensions:\n",
       "[     Corn] = 0.0\n",
       "[  Soybean] = 0.0\n",
@@ -40,7 +41,7 @@
       "[     Peas] = 0.0\n",
       "[    Beans] = 0.0\n",
       "[   Canola] = 0.0\n",
-      "[Sunflower] = 428.77969299373984\n",
+      "[Sunflower] = 900.0\n",
       "[      Hay] = 0.0\n",
       "lstock: 1 dimensions:\n",
       "[Yearling_Steers] = 0.0\n",
@@ -48,8 +49,29 @@
       "[     Dairy_Goat] = 0.0\n",
       "[            Pig] = 0.0\n",
       "[          Sheep] = 0.0\n",
-      "[Broiler_organic] = 0.0\n",
-      "[Broiler_regular] = 0.0\n"
+      "[Broiler_organic] = 1.0\n",
+      "[Broiler_regular] = 0.0\n",
+      "y: 1 dimensions:\n",
+      "[     Corn] = 1.0\n",
+      "[  Soybean] = 1.0\n",
+      "[    Wheat] = 1.0\n",
+      "[      Oat] = -0.0\n",
+      "[   Barley] = -0.0\n",
+      "[ Flaxseed] = -0.0\n",
+      "[      Rye] = 1.0\n",
+      "[     Peas] = -0.0\n",
+      "[    Beans] = -0.0\n",
+      "[   Canola] = -0.0\n",
+      "[Sunflower] = 1.0\n",
+      "[      Hay] = -0.0\n",
+      "z: 1 dimensions:\n",
+      "[Yearling_Steers] = 1.0\n",
+      "[  Steers_Calves] = 1.0\n",
+      "[     Dairy_Goat] = 1.0\n",
+      "[            Pig] = 1.0\n",
+      "[          Sheep] = 1.0\n",
+      "[Broiler_organic] = 1.0\n",
+      "[Broiler_regular] = 1.0\n"
      ]
     }
    ],
@@ -87,19 +109,27 @@
     "#the properties of our farm\n",
     "tt_field=900;\n",
     "tt_housing=3;\n",
-    "tt_money=100000\n",
-    "using JuMP, Clp\n",
-    "m = Model(solver=ClpSolver()) # create model named m\n",
+    "tt_money=10000000\n",
+    "numcrop=5\n",
+    "numlstock=5\n",
+    "lb_crops = \n",
+    "lb_lstock = \n",
+    "\n",
+    "using JuMP,Gurobi\n",
+    "m = Model(solver=GurobiSolver(OutputFlag=0)) # create model named m\n",
     "\n",
     "#variables are the area(acre) to grow each crop and the number(hd) for each livestock\n",
     "@variable(m, crop[crops] >= 0)\n",
+    "@variable(m, y[crops], Bin)\n",
     "@variable(m, lstock[lstocks]>=0)\n",
+    "@variable(m, z[lstocks], Bin)\n",
     "\n",
     "println(crops_information_array)\n",
     "println()\n",
     "println(crops)\n",
     "println(lstocks)\n",
     "println(info_lstocks)\n",
+    "\n",
     "#constraints of pasture and field\n",
     "@constraint(m, sum(crop[i] for i in crops) +sum(lstock[j]*lstocks_information_array[j,:Pasture] for j in lstocks)<= tt_field )\n",
     "\n",
@@ -108,6 +138,18 @@
     "\n",
     "#constraint for money available\n",
     "@constraint(m, sum(crop[i]*crops_information_array[i,:Cost] for i in crops) + sum(lstock[j]*lstocks_information_array[j,:Cost] for j in lstocks) <= tt_money)\n",
+    "\n",
+    "# if crop[i]>0, then y[i]=1\n",
+    "@constraint(m,div1[i in crops], crop[i]<=y[i]*tt_field)\n",
+    "\n",
+    "# if lstock[i]>0, then z[i]=1\n",
+    "@constraint(m, div2[j in lstocks], lstock[j]*lstocks_information_array[j,:Cost]<=z[j]*tt_money)\n",
+    "\n",
+    "#diversity constraint for crop\n",
+    "@constraint(m, sum(y[i] for i in crops)==numcrop)\n",
+    "\n",
+    "#diversity constraint for livestock\n",
+    "@constraint(m,sum(z[j]for j in lstocks)>=numlstock)\n",
     "\n",
     "#constraints for feeding the livestocks using our own crops\n",
     "#@constraint(m, constr[k in feedcrops],sum(lstock[j]*lstocks_information_array[j,k] for j in lstocks) <= crops_information_array[k,:Return] )\n",
@@ -127,7 +169,9 @@
     "solve(m)\n",
     "println(getobjectivevalue(m))\n",
     "println(getvalue(crop))\n",
-    "println(getvalue(lstock))"
+    "println(getvalue(lstock))\n",
+    "println(getvalue(y))\n",
+    "println(getvalue(z))\n"
    ]
   },
   {
