additional run of v3

--- a/farmopt.ipynb
+++ b/farmopt.ipynb
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "#the properties of our farm\n",
-    "tt_field=900;\n",
+    "tt_field=1000;\n",
     "tt_housing=10000;\n",
     "tt_money=10000000\n",
     "#diversity constraint for number of crops to choose\n",
@@ -327,9 +327,9 @@
    "outputs": [],
    "source": [
     "#the properties of our farm\n",
-    "tt_field=900;\n",
-    "tt_housing=90000;\n",
-    "tt_money=500000\n",
+    "tt_field=1000;\n",
+    "tt_housing=10000;\n",
+    "tt_money=1000000\n",
     "numcrop=5\n",
     "numlstock=3\n",
     "# lower bound on area in which a chosen crop must be planted\n",
@@ -439,8 +439,8 @@
     "\n",
     "| v1 Optimal       | Acreage       | Housing  |\n",
     "| ------------- |:-------------| -----:|\n",
-    "| Sunflowers     |100% |  |\n",
-    "| Broiler Chickens| | 100%|\n",
+    "| Sunflower     |100% |  |\n",
+    "| Broiler Chicken| | 100%|\n",
     "\n",
     "### 4.2 v2 Results ###\n",
     "\n",
@@ -448,13 +448,13 @@
     "\n",
     "| v2 Optimal       | Acreage       | Housing  |\n",
     "| ------------- |:-------------| -----:|\n",
-    "| Sunflowers     |~100% |  |\n",
+    "| Sunflower     |~100% |  |\n",
     "|Corn | ~0%| |\n",
     "|Soybean | ~0%| |\n",
     "|Wheat | ~0%| |\n",
     "|Rye | ~0%| |\n",
-    "| Broiler Chickens| | ~100%|\n",
-    "| Yearling Steers| | 1|\n",
+    "| Broiler Chicken| | ~100%|\n",
+    "| Yearling Steer| | 1|\n",
     "|Organic Broiler| | 1|\n",
     "\n",
     "### 4.3 v3 Results ###\n",
@@ -463,16 +463,29 @@
     "\n",
     "| v3 Optimal       | Acreage       | Head  |\n",
     "| ------------- |:-------------| -----:|\n",
-    "| Sunflowers     |598 |  |\n",
+    "| Sunflower     |598 |  |\n",
     "|Corn | 100| |\n",
     "|Soybean | 100| |\n",
     "|Barley | 100| |\n",
     "|Hay | 100| |\n",
-    "| Broiler Chickens| | 3256|\n",
+    "| Broiler Chicken| | 3256|\n",
     "|Sheep| | 10|\n",
     "|Organic Broiler| | 10|\n",
     "\n",
-    "Thus far all trial results are valid for \n",
+    "Thus far all trial results presented are using the standard parameters listed above.  In order to better understand the sensitivity of various aspects of the model we analyzed the model with significantly less available money ($100000).  The results vary significantly from the previous optimal.\n",
+    "\n",
+    "| v3 Optimal (less $)      | Acreage       | Head  |\n",
+    "| ------------- |:-------------| -----:|\n",
+    "| Sunflower     |172.8 |  |\n",
+    "|Soybean | 100| |\n",
+    "|Barley | 100| |\n",
+    "|Peas | 100| |\n",
+    "|Hay | 100| |\n",
+    "| Pig| | 10|\n",
+    "|Broiler Chicken| | 10|\n",
+    "|Organic Broiler| | 10|\n",
+    "\n",
+    "These results demonstrate the impact of the lower bound on the model output.  The \"toy\" model showed that sunflowers were the best return on investment, given enough acreage.  When available money is restricted the optimal choice will be to raise the minimum number of the highest profit animals, the minimum acreage of the highest suboptimal crops and allocate everything else towards sunflowers, the highest profit crop.\n",
     "\n",
     "### 4.4 v4 Results ###"
    ]
