--- a/farmopt.ipynb
+++ b/farmopt.ipynb
@@ -161,7 +161,7 @@
     "crops_information_array = NamedArray(crops_matrix, (crops, info_crops), (\"crops\",\"info_crops\"));\n",
     "\n",
     "\n",
-    "raw1 = CSV.read(\"LiveStock.csv\");\n",
+    "raw1 = CSV.read(\"LiveStock1.csv\");\n",
     "# turn LiveStock into an array\n",
     "lstocks_array = convert(Array,raw1);\n",
     "# the `names' of the DataFrame (header) are the information of each livestock;\n",
@@ -335,7 +335,7 @@
     "# lower bound on area in which a chosen crop must be planted\n",
     "lb_crops =tt_field /(2*numcrop)     ### Added in v3\n",
     "# lower bound on number of head of each chosen type of animal\n",
-    "lb_lstocks =2     ### Added in v3\n",
+    "lb_lstocks = 10     ### Added in v3\n",
     "\n",
     "\n",
     "using JuMP,Gurobi\n",
